--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: run main.py
 
 on:
   schedule:
-    - cron: '0 8 * * *' # At 08:00 daily
+    - cron: '0 * * * *' # At 08:00 daily
 
 jobs:
   build:
